# backend/src/modules/documents/documents.controller.ts
@@ -1,20 +1,30 @@
-import { Controller, Get, Post, Body, Patch, Param, Delete } from '@nestjs/common';
+import { Controller, Get, Post, Body, Patch, Param, Delete, UseGuards } from '@nestjs/common';
 import { DocumentsService } from './documents.service';
 import { CreateDocumentDto } from './dto/create-document.dto';
 import { UpdateDocumentDto } from './dto/update-document.dto';
+import { JwtAuthGuard } from '../auth/guards/jwt-auth-guard';
+import { GetUser } from '../auth/decorators/current-user.decorator';
+import { User } from '@/generated/prisma/client';
+import { DocumentResponseDto } from './dto/document-response.dto';
+import { ApiOkResponse } from '@nestjs/swagger';
 
+@UseGuards(JwtAuthGuard)
 @Controller('documents')
 export class DocumentsController {
-  constructor(private readonly documentsService: DocumentsService) {}
+  constructor(private readonly documentsService: DocumentsService) { }
 
   @Post()
   create(@Body() createDocumentDto: CreateDocumentDto) {
     return this.documentsService.create(createDocumentDto);
   }
 
-  @Get()
-  findAll() {
-    return this.documentsService.findAll();
+  @Get("all")
+  @ApiOkResponse({
+    description: 'All documents',
+    type: DocumentResponseDto,
+  })
+  findAll(@GetUser() user: Omit<User, 'password'>) {
+    return this.documentsService.findAll(user);
   }
 
   @Get(':id')
